RP-945 Move 'General QA' reports to 'QI' category